# gd-bezier

./: CMakeLists.txt  LICENSE  README.md
include/: BezierLayer.hpp
src/: BezierLayer.cpp  misc.hpp
